--- a/revolution/index.html
+++ b/revolution/index.html
@@ -1,1 +1,6 @@
+<html>
+<head>
 <meta http-equiv="refresh" content="0; URL=https://github.com/yahmone/yahmone.github.io/blob/main/revolution.py" />
+</head>
+<body></body>
+</html> 
