--- a/revolution/index.html
+++ b/revolution/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
 <head>
 <meta http-equiv="refresh" content="0; URL=https://github.com/yahmone/yahmone.github.io/blob/main/revolution.py" />
